Fixed horizontal scroll issue in the learn section.

--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,7 @@ and (max-width : 550px)
 
 #learn article ul {
 	list-style: none;
+	padding-left: 0;
 }
 
 #learn article ul li {
